fix bug in animation on ios in direction rtl

--- a/src/components/hero/hero.less
+++ b/src/components/hero/hero.less
@@ -4,6 +4,7 @@
 	padding: 3.5rem 0 0;
 	height: 100vh;
 	width: 100%;
+	overflow-x: hidden;
 	scroll-snap-align: start;
 }
 .full {
